--- a/mask-boot-generator/pom.xml
+++ b/mask-boot-generator/pom.xml
@@ -39,6 +39,11 @@
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity-engine-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
